// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`OptionSelectionPane calls \`cancelOptionSelection\` when cancelled 1`] = `
[
  "id",
]
`;

exports[`OptionSelectionPane calls \`selectOption\` when selected 1`] = `
[
  "id",
  "option_selection_pane",
  "selected",
]
`;

exports[`OptionSelectionPane renders correctly 1`] = `
<DocumentFragment>
  <div
    data-__type="list"
    data-icon="icon"
    data-iconurl="iconUrl"
    data-items="items"
    data-model="[object Object]"
  />
</DocumentFragment>
`;
